# softjax

./: .gitignore  .htaccess  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.sh  sitemap.xml
_static/: hide-notebook-prompts.css  plots.css
_static/Readme/: index.html
all-of-softjax/: all-of-softjax.ipynb  index.html
api/soft_bools/: index.html
api/soft_functions/: index.html
api/soft_indices/: index.html
api/softjax_operators/: index.html
api/straight_through/: index.html
benchmarks/: benchmark.py  measure_normalized_entropy.py  plot_paper.py  plot_results.py
docs/: .citation.md  all-of-softjax.ipynb  index.md  manifold_points.ipynb  paper_examples.py  plot_utils.py  plots.ipynb  quick-example.ipynb
docs/_overrides/partials/: source.html
docs/_static/: Readme.md
docs/api/: random.md  soft_bools.md  soft_functions.md  soft_indices.md  softjax_operators.md  straight_through.md
docs/examples/: long_example.ipynb  long_example.py  quick_example.py
manifold_points/: index.html  manifold_points.ipynb
plots/: index.html
quick-example/: index.html  quick-example.ipynb
search/: search_index.json
src/softjax/: __init__.py  functions.py  projections_permutahedron.py  projections_simplex.py  projections_transport_polytope.py  random.py  sorting_network.py  straight_through.py  utils.py
testing/test/: index.html  test.ipynb
tests/: common.py  conftest.py  test_arraywise.py  test_elementwise.py  test_gradients.py  test_random.py  test_selection.py  test_straight_through.py  test_transforms.py
